KSENROLL-14478: Fixing padding issues to align search content to search input and button.
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-enroll/trunk@74616 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/searchForm.less
+++ b/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/searchForm.less
@@ -9,7 +9,7 @@
 .kscr-SearchForm-form {
     font-family: @secondaryFontFamily;
     .font-size(14);
-    margin: 1rem 0.5rem;
+    margin: 1rem;
 
     & .util-Grid-cell:first-child {
         // Push the first grid cell (input) off of the next (button)
