--- a/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/searchResults.less
+++ b/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/searchResults.less
@@ -13,14 +13,21 @@ If more specific styling needs to take place add to courseSearch.less
   font-family: @secondaryFontFamily;
   .font-size(14);
   font-weight: normal;
-  margin-right: 1rem;
   position: relative;
+}
+
+.kscr-Search-result {
+  .kscr-Search-results-card;
+  margin: 1rem 1rem 0rem 1rem;
+  padding: 0.5rem;
+  cursor: pointer;
 }
 
 .kscr-Search-results-heading {
   padding: 0 0 0.5rem 1.5rem;
   .util-Grid;
   &--small {
+    margin-right: 1rem;
     text-align: right;
   }
 }
@@ -130,13 +137,6 @@ If more specific styling needs to take place add to courseSearch.less
   margin-left: 0.5rem;
 }
 
-.kscr-Search-result {
-  .kscr-Search-results-card;
-  margin: 1rem 0rem 0rem 1rem;
-  padding: 0.5rem;
-  cursor: pointer;
-}
-
 .kscr-Search-row {
   border-bottom: @horizontalLineBorder;
   .kscr-Search-checkbox {
@@ -190,10 +190,6 @@ If more specific styling needs to take place add to courseSearch.less
 
   .kscr-Search-results-table, .kscr-Search-results-paginate {
     display: none;
-  }
-
-  .kscr-Search-results {
-    margin: 0 1rem 1rem 0;
   }
 }
 
